--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,211 @@
+* {
+  font-family: "Courier New", Courier, monospace;
+}
 .App {
   text-align: center;
 }
 
-img {
-  height: 100px;
-}
-
-header {
+.Header {
   display: flex;
   justify-content: space-between;
+  font-family: "Courier New", Courier, monospace;
 }
 
-.Nav ul {
+.Nav button {
   display: block;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* a {
+  text-decoration: none;
+} */
+
+.profile-pic {
+  height: 250px;
+  border-radius: 50%;
+}
+
+.nav-btn {
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.about-para {
+  width: 40%;
+}
+.img-container {
+  position: relative;
+  top: 0;
+  left: 0;
+  border: solid black 1px;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px;
+  overflow: hidden;
+  background-color: var(--gray-6)
+}
+
+.pf-item {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+.app-link {
+  text-decoration: none;
+  color: white
+}
+.over-text {
+  background-color: var(--gray-9);
+  display: none;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  text-align: left;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 10px;
+
+}
+
+.img-container:hover {
+  .pf-item {
+    filter: blur(1rem);
+  }
+  .over-text {
+    filter: blur(0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 40%;
+  }
+  .app-link{
+    margin: 0px 4px;
+    display: flex;
+    align-items: center;
+  }
+  .app-link:hover {
+    color: black;
+  }
+}
+
+.grid-container {
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1500px) {
+  .img-container {
+    width: 440px;
+    height: 100%;
+    min-height: 220px;
+  }
+}
+@media (max-width: 3000px) {
+  .img-container {
+    width: 660px;
+    height: 100%;
+    min-height: 220px;
+  }
+}
+@media (max-width: 772px) {
+  .img-container {
+    width: 440px;
+    height: 100%;
+    min-height: 220px;
+  }
+}
+/* .img-container:hover .app-link {
+  display: block;
+} */
+
+.contact-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+textarea {
+  resize: none;
+}
+.formPiece{
+  padding-bottom: 20px;
+}
+
+.res-page {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.little-logo{
+  width: 18px;
+  height: 18px;
+  margin-bottom: 4.5px;
+}
+.icon {
+  width: 50px;
+  height: 50px;
+  margin: 0px 20px;
+}
+
+footer {
+  margin-top: 50px;
+}
+
+.radix-themes {
+  --default-font-family:  'Courier', serif;
+  --heading-font-family: 'Helvetica Neue' , sans-serif;/* Your custom font for <Heading> components */
+  --code-font-family:     /* Your custom font for <Code> components */
+  --strong-font-family:   /* Your custom font for <Strong> components */
+  --em-font-family:       /* Your custom font for <Em> components */
+  --quote-font-family:    /* Your custom font for <Quote> components */
+
+}
+
+.formLabel {
+  font-weight: bold;
+}
+.formInput {
+  font-size: 20px;
+  width: 290px;
+  border-radius: 5px;
+  background-color: var(--gray-6);
+  border-style: none;
+}
+
+.Button {
+  margin-top: 20px;
+  background-color: var(--focus-9);
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.formFlex {
+  border: var(--gray-8) solid 2px;
+  padding: 20px;
+  border-radius: 10px;
+  
+}
+
+.alertMess {
+  color: var(--red-9);
+  font-size: 15px;
+  text-align: right;
+}
+h3{
+  font-size: 20px;
+  font-weight: 900;
+}
+li{
+  font-size: 18px;
+  font-weight: 550
 }
