--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   padding: 20px;
   margin: 20px;
   overflow: hidden;
-  background-color: var(--gray-6)
+  background-color: var(--gray-6);
 }
 
 .pf-item {
@@ -54,7 +54,7 @@
 }
 .app-link {
   text-decoration: none;
-  color: white
+  color: white;
 }
 .over-text {
   background-color: var(--gray-9);
@@ -66,7 +66,6 @@
   text-decoration: none;
   padding: 5px;
   border-radius: 10px;
-
 }
 
 .img-container:hover {
@@ -80,7 +79,7 @@
     align-items: center;
     width: 40%;
   }
-  .app-link{
+  .app-link {
     margin: 0px 4px;
     display: flex;
     align-items: center;
@@ -134,7 +133,7 @@
 textarea {
   resize: none;
 }
-.formPiece{
+.formPiece {
   padding-bottom: 20px;
 }
 
@@ -144,7 +143,7 @@ textarea {
   align-items: flex-start;
 }
 
-.little-logo{
+.little-logo {
   width: 18px;
   height: 18px;
   margin-bottom: 4.5px;
@@ -160,13 +159,8 @@ footer {
 }
 
 .radix-themes {
-  --default-font-family:  'Courier', serif;
-  --heading-font-family: 'Helvetica Neue' , sans-serif;/* Your custom font for <Heading> components */
-  --code-font-family:     /* Your custom font for <Code> components */
-  --strong-font-family:   /* Your custom font for <Strong> components */
-  --em-font-family:       /* Your custom font for <Em> components */
-  --quote-font-family:    /* Your custom font for <Quote> components */
-
+  --default-font-family: "Courier", serif;
+  --heading-font-family: "Helvetica Neue", sans-serif;
 }
 
 .formLabel {
@@ -193,7 +187,6 @@ footer {
   border: var(--gray-8) solid 2px;
   padding: 20px;
   border-radius: 10px;
-  
 }
 
 .alertMess {
@@ -201,11 +194,11 @@ footer {
   font-size: 15px;
   text-align: right;
 }
-h3{
+h3 {
   font-size: 20px;
   font-weight: 900;
 }
-li{
+li {
   font-size: 18px;
-  font-weight: 550
+  font-weight: 550;
 }
